Tweaked clue scramble threshold, fixed css spacing on Article Loading

--- a/static/css/src/style.less
+++ b/static/css/src/style.less
@@ -744,7 +744,7 @@ backToTheGame{
 	font-size: @large;
 	line-height: 42px;
 	font-weight: bold;
-	margin: 200px 34% 30px 34%;
+	margin: 200px 30% 30px 30%;
 }
 
 
